# DEAR

./: .gitignore  =  SIMPLIFIED_AGENT_SYSTEM.md  coding_graph.md  debug_coding_workflow.py  debug_draw.py  debug_workflow.py  direct_workflow_output.md  fresh_coding_graph.md  game_README.md  generate_mermaid.py  generate_simplified_mermaid.py  get_linear_teams.py  langgraph.json  package-lock.json  pyproject.toml  run_coding_workflow.py  run_no_interrupts.py  run_simplified_workflow.py  server.py  test_gemini_streaming.py  test_interactive_mode.py  test_interrupt_display.py  test_linear_api.py  test_message_display.py  test_simplified_linear_queries.py  test_updated_linear_queries.py  verify_interactive_mode.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: branch-protection.yaml  code-quality.yaml  lint.yaml  security-scan.yaml  test-with-coverage.yaml  unittest.yaml
config/: interactive_mode.json  workflow_settings.json
docs/: PROJECT_PLAN.md  idea.md  project_vision.md
examples/pygame_click_to_move/: README.md  game.py
src/: repomix-output.md  repomix-output.xml  workflow.py
src/agents/: agents.py
src/config/: agents.py  configuration.py
src/graph/: __init__.py  builder.py  coding_builder.py  context_nodes.py  github_nodes.py  nodes.py  simplified_builder.py  types.py  visualizer.py
src/llms/: llm.py
src/prompts/: coding_coordinator.md  coding_planner.md  coding_planner_task_list.md
src/server/: app.py  chat_request.py  mcp_models.py
src/tools/: codegen_service.py  github_service.py  (+3 more)
web/: components.json  package.json  pnpm-lock.yaml  prettier.config.js
(+56 files in other folders)
