[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deer-flow"
version = "0.1.0"
description = "DeerFlow project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.24",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "readabilipy>=0.3.0",
    "python-dotenv>=1.1.0",
    "socksio>=1.0.0",
    "markdownify>=1.1.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "sse-starlette>=2.3.5",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "yfinance>=0.2.61",
    "litellm>=1.67.4.post1",
    "json-repair>=0.44.1",
    "jinja2>=3.1.3",
    "duckduckgo-search>=8.0.1",
    "inquirerpy>=0.3.4",
    "arxiv>=2.2.0",
    "mcp>=1.8.1",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-google-genai>=2.1.4",
    "langchain-xai>=0.2.3",
    "openai>=1.78.1",
    "PyGithub>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''
